Re-run backtest

--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ Pygments==2.19.2
 pytest==9.0.2
 pytest-timeout==2.4.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 pyzmq==27.1.0
 referencing==0.37.0
