--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,8 +16,8 @@ services:
       TIMEFRAME_HOURS: ${TIMEFRAME_HOURS:-1}
       MR_EXPOSURE: ${MR_EXPOSURE:-1.0}
       TF_EXPOSURE: ${TF_EXPOSURE:-1.0}
-      VOL_Z_WINDOW: ${VOL_Z_WINDOW:-21}
-      VOL_Z_ENTRY_THRESHOLD: ${VOL_Z_ENTRY_THRESHOLD:-0.0}
+      VOL_RANK_WINDOW: ${VOL_RANK_WINDOW:-21}
+      VOL_RANK_ENTRY_THRESHOLD: ${VOL_RANK_ENTRY_THRESHOLD:-50.0}
       BAND_STD_DEV: ${BAND_STD_DEV:-0.8}
       ATR_MULTIPLIER: ${ATR_MULTIPLIER:-3.0}
       LONG_ONLY: ${LONG_ONLY:-0}
